--- a/index.html
+++ b/index.html
@@ -6,12 +6,70 @@
     <title>my website</title> <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="gallery">
-        <img src="./asset/images/practice1.jpg" alt="">
-        <img src="./asset/images/practice2.jpg" alt="">
-        <img src="./asset/images/practice3.jpg" alt=""> 
-        <img src="./asset/images/practice4.jpg" alt="">
-        <img src="./asset/images/practice5.jpg" alt="">
-     </div>
+   <div class="link-item">
+    <nav>
+        <ul>
+            <li class="link"><a href="https://www.ableton.com/en/about/">About</a></li>
+             <li class="link"><a href="https://www.ableton.com/en/jobs/">Jobs</a></li>
+             <li class="link"><a href="https://www.ableton.com/en/ausbildung/">Apprenticeships</a></li>
+        </ul>
+    </nav>  
+   </div>
+     <div class="main"> 
+        <img src="./asset/images/image1.avif" alt="">
+        <h1> Ableton </h1>
+    </div>
+    <div class="boby-text">
+        <h2>
+        we make
+        <a href="https://www.ableton.com/en/live/">Live</a>
+        , 
+        <a href="https://www.ableton.com/en/push/">Push</a>
+         , 
+         <a href="https://www.ableton.com/en/note/">Note</a>
+          , 
+          <a href="https://www.ableton.com/en/move/">Move</a>
+          , 
+          <a href="https://www.ableton.com/en/link/">Link</a>
+            — unique software and hardware for music creation and performance.
+     With these products, our community of users creates amazing things.
+          
+      </h2>
+      <p>Ableton was founded in 1999 and released the first version of Live in 2001.
+         Our products are used by a community of dedicated musicians, sound designers, and artists from across the world.</p>
+    </div>
+    <div class="student-page">
+        <div class="photo"> <img src="./asset/images/photo-1.jpg" alt="" width="600px"></div>
+        <div class="layerbase"></div>
+        <div class="lastphoto"> <img src="./asset/images/photo-2.jpg" alt="" width="500px"></div>
+    </div>
+    <div class="text-boby">
+        <h2 class="text1">Making music isn’t easy. 
+            It takes time, effort, and learning.
+             But when you’re in the flow, it’s incredibly rewarding.</h2>
+        <p class="text2">We feel the same way about making Ableton products.
+             The driving force behind Ableton is our passion for what we make,
+              and the people we make it for.</p>
+    </div>
+    <div class="video">
+        <figure>
+            <iframe src="https://www.youtube.com/embed/9SbnhgjeyXA"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen width="679px" height="328" >
+            </iframe>
+              <figcaption>Why Ableton -juanpe Bolivar</figcaption>
+        </figure>
+    </div>
+    <div class="text-second">
+        <h2>We are more than 350 people from 30 different countries divided between
+             our headquarters in Berlin and our offices in Los Angeles and Tokyo.</h2>
+             <p>Most of us are active musicians, producers, and DJs, and many of us use Live and Push every day.
+                 We come from a wide range of cultural and professional backgrounds.
+                 Some of us have PhDs, some are self-taught, and most of us are somewhere in between.
+                  What connects us is the shared belief that each of us has the skills and knowledge to contribute 
+                  to something big: helping to shape the future of music culture.</p>
+    </div>
+     
+</head>
+
 </body>
 </html>
