--- a/index.html
+++ b/index.html
@@ -68,7 +68,33 @@
                   What connects us is the shared belief that each of us has the skills and knowledge to contribute 
                   to something big: helping to shape the future of music culture.</p>
     </div>
-     
+    <div class="triple-images">
+        <div class="first"></div>
+        <div class="second"> <img src="./asset/images/photo-3.jpg" alt="" width="450px"></div>
+        <div class="third"> <img src="./asset/images/photo-4.jpg" alt="" width="450px"></div>
+        <div class="forth"> <img src="./asset/images/photo-5.jpg" alt="" width="600px"></div>
+    </div>
+     <div class="text2">
+        <h2>We believe it takes focus to create truly outstanding instruments. 
+            We only work on a few products and we strive to make them great.</h2>
+            <p>Rather than having a one-size-fits-all process, we try to give our people what they need to work their magic and grow.
+                 We’ve learned that achieving the best results comes from building teams that are richly diverse, and thus able to explore problems from a wider set of perspectives. 
+                We don’t always agree with each other, but opinion and debate are valued and openly encouraged.</p>
+     </div>
+     <div class="makers"> <img src="./asset/images/poster-meet-the-makers.avif " alt=""></div>
+     <div class="text3">
+        <h2>We’re passionate about what we do, but we’re equally passionate about improving who we are. </h2>
+        <p>We work hard to foster an environment where people can grow both personally and professionally,
+             and we strive to create a wealth of opportunities to learn from and with each other.</p>
+        <p>Alongside an internal training program, employees are actively supported in acquiring new knowledge and skills,
+             and coached on applying these in their daily work. In addition, staff-organized development and music salons are a chance to discuss new technologies,
+             production techniques and best practices.</p>
+     </div>
+     <div class="box">
+        <div class="box1"></div>
+        <div class="box2"> <img src="./asset/images/photo-6-a.jpg" alt=""></div>
+        <div class="box3"> <img src="./asset/images/photo-7.jpg " alt=""></div>
+     </div>
 </head>
 
 </body>
