--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn more about Ableton - maker of Live and Push | Ableton</title> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="queries.css">
+    <link rel="stylesheet" href="job.css">
+    <link rel="stylesheet" href="apprenticeships.css">
 
 </head>
 <body>
